<resources>
    <string name="app_name">Bikeweek</string>
    <string name="Cyclist_Blue">Cyclist Blue</string>
    <string name="Score">0</string>
    <string name="Cyclist_Yellow">Cyclist Yellow</string>
    <string name="Cyclist_Violet">Cyclist Violet</string>
    <string name="Cyclist_White">Cyclist White</string>
    <string name="First">1°</string>
    <string name="Second">2°</string>
    <string name="Third">3°</string>
    <string name="Fourth">4°</string>
    <string name="race">RACE</string>
    
</resources>
